# Clinical-Whisper-Pipeline

./: .gitignore  LICENSE  README.md  README_zh.md  acoustic_context.py  acoustic_features.py  api.py  app.py  batch_processor.py  config.example.yaml  config.yaml  cw_config.py  export_features.py  inference_pipeline.py  llm_clinical_scorer.py  llm_embeddings.py  longitudinal.py  main.py  plaud_ingester.py  pyproject.toml  question_detector.py  queue_store.py  requirements.txt  sentiment_analyzer.py  speaker_diarizer.py  transcript_formatter.py  worker.py
.github/workflows/: ci.yml
Symposium/Scripts/: generate_figures.py  generate_figures_streamB.py
evals/: golden_dataset.jsonl  run_evals.py
scripts/: com.clinicalwhisper.pipeline.plist  com.clinicalwhisper.plaud-connector.plist  generate_showcase_gif.py  generate_showcase_pdf.py  install_plaud_connector.sh  plaud_connector.sh  render_mermaid.py  start_pipeline.sh
tests/: __init__.py  conftest.py  test_pipeline.py  test_sentiment.py
